Enabled JDK14 compatibility in gradle build script
Change-Id: I929e7dc8253b61edc31d69b3e765e2d10621e3a8